--- a/web/ico.html
+++ b/web/ico.html
@@ -17,13 +17,8 @@
     <div class="site-wrapper">
         <div class="site-wrapper-inner">
             <div class="cover-container">
-                <div class="masthead clearfix">
-                    <div class="inner">
-                        <h3 class="masthead-brand"><img src="https://dashboard.followcoin.io/assets/logo.png"></h3>
-                    </div>
-                </div>
                 <div class="inner cover">
-                    <h1 class="cover-heading">Follow Coin Token ICO</h1>
+                    <h1 class="cover-heading">Follow Coin ICO</h1>
                     <p class="lead" id="contractAddress"></p>
                     <p class="lead font-weight-bold">Raised so far:</p>
                     <h2 id="totalRaised"></h2>
@@ -37,24 +32,30 @@
                             <dd id="endDate"></dd>
                         </dl>
                     </div>
+
+
+                    
                     <div class="row">
                         <dl class="col">
                             <dt>Rate</dt>
-                            <dd>1 ETH = 50 FLLW</dd>
+                            <dd>1 ETH = <strong id="tokensPerEther"></strong></dd>
                         </dl>
+                    </div>
+
+                    <div class="row">
                         <dl class="col">
-                            <dt>First week bonus</dt>
-                            <dd>+50%</dd>
+                            <dt>Limit per wallet</dt>
+                            <dd><strong id="tokenLimitPerWallet"></strong></dd>
                         </dl>
                     </div>
                     <div class="row">
                         <dl class="col">
-                            <dt>Total supply</dt>
-                            <dd>1000000 FLLW</dd>
+                            <dt>Investors</dt>
+                            <dd id="investorCount"></dd>
                         </dl>
                         <dl class="col">
-                            <dt>Minimum target</dt>
-                            <dd id="minCap"></dd>
+                            <dt>Total supply</dt>
+                            <dd id="totalSupply"></dd>
                         </dl>
                         <dl class="col">
                             <dt>Maximum cap</dt>
